--- a/resources/css/_tailwind.css
+++ b/resources/css/_tailwind.css
@@ -1,10 +1,9 @@
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 @layer base {
     html {
-        font-family: "Poppins", sans-serif;
+        font-family: 'Poppins', sans-serif;
     }
 }
