--- a/resources/css/_theme.css
+++ b/resources/css/_theme.css
@@ -51,8 +51,7 @@
     box-sizing: border-box;
 }
 .p-component {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif,
-        'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+    font-family: 'Poppins', sans-serif;
     font-size: 1rem;
     font-weight: normal;
 }
@@ -1659,7 +1658,7 @@
     color: #fff;
     background: #383838;
     border: 1px solid #383838;
-    padding: 1rem 1.5rem;
+    padding: 1.2rem 1.8rem;
     font-size: 1rem;
     transition: background-color 0.2s, color 0.2s, border-color 0.2s, box-shadow 0.2s;
     border-radius: 6px;
