--- a/resources/css/_theme.css
+++ b/resources/css/_theme.css
@@ -1054,8 +1054,6 @@
     border-color: #e24c4c;
 }
 .p-inputtext {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif,
-        'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
     font-size: 1rem;
     color: #495057;
     background: #fff;
@@ -1064,6 +1062,9 @@
     transition: background-color 0.2s, color 0.2s, border-color 0.2s, box-shadow 0.2s;
     appearance: none;
     border-radius: 6px;
+}
+.p-inputtext::placeholder {
+    @apply text-sm text-slate-400;
 }
 .p-inputtext:enabled:hover {
     border-color: #383838;
