--- a/resources/css/_theme.css
+++ b/resources/css/_theme.css
@@ -1677,7 +1677,7 @@
 .p-button.p-button-outlined {
     background-color: transparent;
     color: #383838;
-    border: 1px solid;
+    border: 1px solid #ced4da;
 }
 .p-button.p-button-outlined:enabled:hover {
     background: rgba(56, 56, 56, 0.04);
