--- a/resources/css/_theme.css
+++ b/resources/css/_theme.css
@@ -1258,8 +1258,8 @@
 .p-inputtext {
     color: #495057;
     background: #fff;
-    padding: 0.75rem 0.75rem;
-    border: 1px solid #ced4da;
+    padding: 1rem;
+    border: 1px solid #ededed;
     transition: background-color 0.2s, color 0.2s, border-color 0.2s, box-shadow 0.2s;
     appearance: none;
     border-radius: 6px;
@@ -5840,7 +5840,7 @@
     padding: 0.25rem 0;
     background: #fff;
     color: #495057;
-    border: 1px solid #dee2e6;
+    border: 1px solid #ededed;
     border-radius: 6px;
     width: 12.5rem;
 }
