--- a/resources/css/_theme.css
+++ b/resources/css/_theme.css
@@ -10,7 +10,7 @@
     --primary-color: #383838;
     --primary-color-text: #ffffff;
     --font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica, Arial, sans-serif, Apple Color Emoji,
-    Segoe UI Emoji, Segoe UI Symbol;
+        Segoe UI Emoji, Segoe UI Symbol;
     --surface-0: #ffffff;
     --surface-50: #fafafa;
     --surface-100: #f5f5f5;
@@ -88,7 +88,7 @@
 .p-link {
     font-size: 1rem;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif,
-    'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+        'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
     border-radius: 6px;
 }
 
@@ -277,7 +277,7 @@
 
 .p-autocomplete .p-autocomplete-multiple-container .p-autocomplete-input-token input {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif,
-    'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+        'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
     font-size: 1rem;
     color: #495057;
     padding: 0;
@@ -827,7 +827,7 @@
 
 .p-chips .p-chips-multiple-container .p-chips-input-token input {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif,
-    'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+        'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
     font-size: 1rem;
     color: #495057;
     padding: 0;
@@ -1266,7 +1266,7 @@
     transition: background-color 0.2s, color 0.2s, border-color 0.2s, box-shadow 0.2s;
     appearance: none;
     border-radius: 6px;
-    @apply text-sm
+    @apply text-sm;
 }
 
 .p-inputtext::placeholder {
@@ -3335,15 +3335,15 @@
 .p-datatable.p-datatable-scrollable > .p-datatable-wrapper > .p-datatable-table > .p-datatable-thead,
 .p-datatable.p-datatable-scrollable > .p-datatable-wrapper > .p-datatable-table > .p-datatable-tfoot,
 .p-datatable.p-datatable-scrollable
-> .p-datatable-wrapper
-> .p-virtualscroller
-> .p-datatable-table
-> .p-datatable-thead,
+    > .p-datatable-wrapper
+    > .p-virtualscroller
+    > .p-datatable-table
+    > .p-datatable-thead,
 .p-datatable.p-datatable-scrollable
-> .p-datatable-wrapper
-> .p-virtualscroller
-> .p-datatable-table
-> .p-datatable-tfoot {
+    > .p-datatable-wrapper
+    > .p-virtualscroller
+    > .p-datatable-table
+    > .p-datatable-tfoot {
     background-color: #f8f9fa;
 }
 
@@ -3417,23 +3417,23 @@
 }
 
 .p-datatable.p-datatable-gridlines:has(.p-datatable-thead):has(.p-datatable-tbody)
-.p-datatable-tbody
-> tr
-> td:last-child {
+    .p-datatable-tbody
+    > tr
+    > td:last-child {
     border-width: 0 1px 1px 1px;
 }
 
 .p-datatable.p-datatable-gridlines:has(.p-datatable-tbody):has(.p-datatable-tfoot)
-.p-datatable-tbody
-> tr:last-child
-> td {
+    .p-datatable-tbody
+    > tr:last-child
+    > td {
     border-width: 0 0 0 1px;
 }
 
 .p-datatable.p-datatable-gridlines:has(.p-datatable-tbody):has(.p-datatable-tfoot)
-.p-datatable-tbody
-> tr:last-child
-> td:last-child {
+    .p-datatable-tbody
+    > tr:last-child
+    > td:last-child {
     border-width: 0 1px 0 1px;
 }
 
@@ -5474,23 +5474,23 @@
 }
 
 .p-contextmenu
-.p-menuitem:not(.p-highlight):not(.p-disabled).p-focus
-> .p-menuitem-content
-.p-menuitem-link
-.p-menuitem-text {
+    .p-menuitem:not(.p-highlight):not(.p-disabled).p-focus
+    > .p-menuitem-content
+    .p-menuitem-link
+    .p-menuitem-text {
     color: #495057;
 }
 
 .p-contextmenu
-.p-menuitem:not(.p-highlight):not(.p-disabled).p-focus
-> .p-menuitem-content
-.p-menuitem-link
-.p-menuitem-icon,
+    .p-menuitem:not(.p-highlight):not(.p-disabled).p-focus
+    > .p-menuitem-content
+    .p-menuitem-link
+    .p-menuitem-icon,
 .p-contextmenu
-.p-menuitem:not(.p-highlight):not(.p-disabled).p-focus
-> .p-menuitem-content
-.p-menuitem-link
-.p-submenu-icon {
+    .p-menuitem:not(.p-highlight):not(.p-disabled).p-focus
+    > .p-menuitem-content
+    .p-menuitem-link
+    .p-submenu-icon {
     color: #495057;
 }
 
@@ -5500,23 +5500,23 @@
 }
 
 .p-contextmenu
-.p-menuitem:not(.p-highlight):not(.p-disabled)
-> .p-menuitem-content:hover
-.p-menuitem-link
-.p-menuitem-text {
+    .p-menuitem:not(.p-highlight):not(.p-disabled)
+    > .p-menuitem-content:hover
+    .p-menuitem-link
+    .p-menuitem-text {
     color: #495057;
 }
 
 .p-contextmenu
-.p-menuitem:not(.p-highlight):not(.p-disabled)
-> .p-menuitem-content:hover
-.p-menuitem-link
-.p-menuitem-icon,
+    .p-menuitem:not(.p-highlight):not(.p-disabled)
+    > .p-menuitem-content:hover
+    .p-menuitem-link
+    .p-menuitem-icon,
 .p-contextmenu
-.p-menuitem:not(.p-highlight):not(.p-disabled)
-> .p-menuitem-content:hover
-.p-menuitem-link
-.p-submenu-icon {
+    .p-menuitem:not(.p-highlight):not(.p-disabled)
+    > .p-menuitem-content:hover
+    .p-menuitem-link
+    .p-submenu-icon {
     color: #6c757d;
 }
 
@@ -5689,23 +5689,23 @@
 }
 
 .p-megamenu
-.p-menuitem:not(.p-highlight):not(.p-disabled).p-focus
-> .p-menuitem-content
-.p-menuitem-link
-.p-menuitem-text {
+    .p-menuitem:not(.p-highlight):not(.p-disabled).p-focus
+    > .p-menuitem-content
+    .p-menuitem-link
+    .p-menuitem-text {
     color: #495057;
 }
 
 .p-megamenu
-.p-menuitem:not(.p-highlight):not(.p-disabled).p-focus
-> .p-menuitem-content
-.p-menuitem-link
-.p-menuitem-icon,
+    .p-menuitem:not(.p-highlight):not(.p-disabled).p-focus
+    > .p-menuitem-content
+    .p-menuitem-link
+    .p-menuitem-icon,
 .p-megamenu
-.p-menuitem:not(.p-highlight):not(.p-disabled).p-focus
-> .p-menuitem-content
-.p-menuitem-link
-.p-submenu-icon {
+    .p-menuitem:not(.p-highlight):not(.p-disabled).p-focus
+    > .p-menuitem-content
+    .p-menuitem-link
+    .p-submenu-icon {
     color: #495057;
 }
 
@@ -5715,23 +5715,23 @@
 }
 
 .p-megamenu
-.p-menuitem:not(.p-highlight):not(.p-disabled)
-> .p-menuitem-content:hover
-.p-menuitem-link
-.p-menuitem-text {
+    .p-menuitem:not(.p-highlight):not(.p-disabled)
+    > .p-menuitem-content:hover
+    .p-menuitem-link
+    .p-menuitem-text {
     color: #495057;
 }
 
 .p-megamenu
-.p-menuitem:not(.p-highlight):not(.p-disabled)
-> .p-menuitem-content:hover
-.p-menuitem-link
-.p-menuitem-icon,
+    .p-menuitem:not(.p-highlight):not(.p-disabled)
+    > .p-menuitem-content:hover
+    .p-menuitem-link
+    .p-menuitem-icon,
 .p-megamenu
-.p-menuitem:not(.p-highlight):not(.p-disabled)
-> .p-menuitem-content:hover
-.p-menuitem-link
-.p-submenu-icon {
+    .p-menuitem:not(.p-highlight):not(.p-disabled)
+    > .p-menuitem-content:hover
+    .p-menuitem-link
+    .p-submenu-icon {
     color: #6c757d;
 }
 
@@ -5779,63 +5779,63 @@
 }
 
 .p-megamenu.p-megamenu-horizontal
-.p-megamenu-root-list
-> .p-menuitem
-> .p-menuitem-content
-.p-menuitem-link
-.p-menuitem-text {
+    .p-megamenu-root-list
+    > .p-menuitem
+    > .p-menuitem-content
+    .p-menuitem-link
+    .p-menuitem-text {
     color: #495057;
 }
 
 .p-megamenu.p-megamenu-horizontal
-.p-megamenu-root-list
-> .p-menuitem
-> .p-menuitem-content
-.p-menuitem-link
-.p-menuitem-icon {
+    .p-megamenu-root-list
+    > .p-menuitem
+    > .p-menuitem-content
+    .p-menuitem-link
+    .p-menuitem-icon {
     color: #6c757d;
     margin-right: 0.5rem;
 }
 
 .p-megamenu.p-megamenu-horizontal
-.p-megamenu-root-list
-> .p-menuitem
-> .p-menuitem-content
-.p-menuitem-link
-.p-submenu-icon {
+    .p-megamenu-root-list
+    > .p-menuitem
+    > .p-menuitem-content
+    .p-menuitem-link
+    .p-submenu-icon {
     color: #6c757d;
     margin-left: 0.5rem;
 }
 
 .p-megamenu.p-megamenu-horizontal
-.p-megamenu-root-list
-> .p-menuitem:not(.p-highlight):not(.p-disabled)
-> .p-menuitem-content:hover {
+    .p-megamenu-root-list
+    > .p-menuitem:not(.p-highlight):not(.p-disabled)
+    > .p-menuitem-content:hover {
     color: #495057;
     background: #e9ecef;
 }
 
 .p-megamenu.p-megamenu-horizontal
-.p-megamenu-root-list
-> .p-menuitem:not(.p-highlight):not(.p-disabled)
-> .p-menuitem-content:hover
-.p-menuitem-link
-.p-menuitem-text {
+    .p-megamenu-root-list
+    > .p-menuitem:not(.p-highlight):not(.p-disabled)
+    > .p-menuitem-content:hover
+    .p-menuitem-link
+    .p-menuitem-text {
     color: #495057;
 }
 
 .p-megamenu.p-megamenu-horizontal
-.p-megamenu-root-list
-> .p-menuitem:not(.p-highlight):not(.p-disabled)
-> .p-menuitem-content:hover
-.p-menuitem-link
-.p-menuitem-icon,
+    .p-megamenu-root-list
+    > .p-menuitem:not(.p-highlight):not(.p-disabled)
+    > .p-menuitem-content:hover
+    .p-menuitem-link
+    .p-menuitem-icon,
 .p-megamenu.p-megamenu-horizontal
-.p-megamenu-root-list
-> .p-menuitem:not(.p-highlight):not(.p-disabled)
-> .p-menuitem-content:hover
-.p-menuitem-link
-.p-submenu-icon {
+    .p-megamenu-root-list
+    > .p-menuitem:not(.p-highlight):not(.p-disabled)
+    > .p-menuitem-content:hover
+    .p-menuitem-link
+    .p-submenu-icon {
     color: #6c757d;
 }
 
@@ -5983,26 +5983,26 @@
 }
 
 .p-menubar
-.p-menubar-root-list
-> .p-menuitem:not(.p-highlight):not(.p-disabled)
-> .p-menuitem-content:hover
-.p-menuitem-link
-.p-menuitem-text {
+    .p-menubar-root-list
+    > .p-menuitem:not(.p-highlight):not(.p-disabled)
+    > .p-menuitem-content:hover
+    .p-menuitem-link
+    .p-menuitem-text {
     color: #495057;
 }
 
 .p-menubar
-.p-menubar-root-list
-> .p-menuitem:not(.p-highlight):not(.p-disabled)
-> .p-menuitem-content:hover
-.p-menuitem-link
-.p-menuitem-icon,
+    .p-menubar-root-list
+    > .p-menuitem:not(.p-highlight):not(.p-disabled)
+    > .p-menuitem-content:hover
+    .p-menuitem-link
+    .p-menuitem-icon,
 .p-menubar
-.p-menubar-root-list
-> .p-menuitem:not(.p-highlight):not(.p-disabled)
-> .p-menuitem-content:hover
-.p-menuitem-link
-.p-submenu-icon {
+    .p-menubar-root-list
+    > .p-menuitem:not(.p-highlight):not(.p-disabled)
+    > .p-menuitem-content:hover
+    .p-menuitem-link
+    .p-submenu-icon {
     color: #6c757d;
 }
 
@@ -6055,23 +6055,23 @@
 }
 
 .p-menubar
-.p-menuitem:not(.p-highlight):not(.p-disabled).p-focus
-> .p-menuitem-content
-.p-menuitem-link
-.p-menuitem-text {
+    .p-menuitem:not(.p-highlight):not(.p-disabled).p-focus
+    > .p-menuitem-content
+    .p-menuitem-link
+    .p-menuitem-text {
     color: #495057;
 }
 
 .p-menubar
-.p-menuitem:not(.p-highlight):not(.p-disabled).p-focus
-> .p-menuitem-content
-.p-menuitem-link
-.p-menuitem-icon,
+    .p-menuitem:not(.p-highlight):not(.p-disabled).p-focus
+    > .p-menuitem-content
+    .p-menuitem-link
+    .p-menuitem-icon,
 .p-menubar
-.p-menuitem:not(.p-highlight):not(.p-disabled).p-focus
-> .p-menuitem-content
-.p-menuitem-link
-.p-submenu-icon {
+    .p-menuitem:not(.p-highlight):not(.p-disabled).p-focus
+    > .p-menuitem-content
+    .p-menuitem-link
+    .p-submenu-icon {
     color: #495057;
 }
 
@@ -6081,10 +6081,10 @@
 }
 
 .p-menubar
-.p-menuitem:not(.p-highlight):not(.p-disabled)
-> .p-menuitem-content:hover
-.p-menuitem-link
-.p-menuitem-text {
+    .p-menuitem:not(.p-highlight):not(.p-disabled)
+    > .p-menuitem-content:hover
+    .p-menuitem-link
+    .p-menuitem-text {
     color: #495057;
 }
 
@@ -6165,11 +6165,11 @@
     }
 
     .p-menubar
-    .p-menubar-root-list
-    .p-menuitem.p-menuitem-active
-    > .p-menuitem-content
-    > .p-menuitem-link
-    > .p-submenu-icon {
+        .p-menubar-root-list
+        .p-menuitem.p-menuitem-active
+        > .p-menuitem-content
+        > .p-menuitem-link
+        > .p-submenu-icon {
         transform: rotate(-180deg);
     }
 
@@ -6186,12 +6186,12 @@
     }
 
     .p-menubar
-    .p-menubar-root-list
-    .p-submenu-list
-    .p-menuitem-active
-    > .p-menuitem-content
-    > .p-menuitem-link
-    > .p-submenu-icon {
+        .p-menubar-root-list
+        .p-submenu-list
+        .p-menuitem-active
+        > .p-menuitem-content
+        > .p-menuitem-link
+        > .p-submenu-icon {
         transform: rotate(-90deg);
     }
 
@@ -6205,58 +6205,58 @@
     }
 
     .p-menubar
-    .p-menubar-root-list
-    .p-submenu-list
-    .p-menuitem
-    .p-submenu-list
-    .p-menuitem
-    .p-menuitem-content
-    .p-menuitem-link {
+        .p-menubar-root-list
+        .p-submenu-list
+        .p-menuitem
+        .p-submenu-list
+        .p-menuitem
+        .p-menuitem-content
+        .p-menuitem-link {
         padding-left: 3.75rem;
     }
 
     .p-menubar
-    .p-menubar-root-list
-    .p-submenu-list
-    .p-menuitem
-    .p-submenu-list
-    .p-menuitem
-    .p-submenu-list
-    .p-menuitem
-    .p-menuitem-content
-    .p-menuitem-link {
+        .p-menubar-root-list
+        .p-submenu-list
+        .p-menuitem
+        .p-submenu-list
+        .p-menuitem
+        .p-submenu-list
+        .p-menuitem
+        .p-menuitem-content
+        .p-menuitem-link {
         padding-left: 5.25rem;
     }
 
     .p-menubar
-    .p-menubar-root-list
-    .p-submenu-list
-    .p-menuitem
-    .p-submenu-list
-    .p-menuitem
-    .p-submenu-list
-    .p-menuitem
-    .p-submenu-list
-    .p-menuitem
-    .p-menuitem-content
-    .p-menuitem-link {
+        .p-menubar-root-list
+        .p-submenu-list
+        .p-menuitem
+        .p-submenu-list
+        .p-menuitem
+        .p-submenu-list
+        .p-menuitem
+        .p-submenu-list
+        .p-menuitem
+        .p-menuitem-content
+        .p-menuitem-link {
         padding-left: 6.75rem;
     }
 
     .p-menubar
-    .p-menubar-root-list
-    .p-submenu-list
-    .p-menuitem
-    .p-submenu-list
-    .p-menuitem
-    .p-submenu-list
-    .p-menuitem
-    .p-submenu-list
-    .p-menuitem
-    .p-submenu-list
-    .p-menuitem
-    .p-menuitem-content
-    .p-menuitem-link {
+        .p-menubar-root-list
+        .p-submenu-list
+        .p-menuitem
+        .p-submenu-list
+        .p-menuitem
+        .p-submenu-list
+        .p-menuitem
+        .p-submenu-list
+        .p-menuitem
+        .p-submenu-list
+        .p-menuitem
+        .p-menuitem-content
+        .p-menuitem-link {
         padding-left: 8.25rem;
     }
 
@@ -6387,26 +6387,26 @@
 }
 
 .p-panelmenu
-.p-panelmenu-content
-.p-menuitem:not(.p-highlight):not(.p-disabled).p-focus
-> .p-menuitem-content
-.p-menuitem-link
-.p-menuitem-text {
+    .p-panelmenu-content
+    .p-menuitem:not(.p-highlight):not(.p-disabled).p-focus
+    > .p-menuitem-content
+    .p-menuitem-link
+    .p-menuitem-text {
     color: #495057;
 }
 
 .p-panelmenu
-.p-panelmenu-content
-.p-menuitem:not(.p-highlight):not(.p-disabled).p-focus
-> .p-menuitem-content
-.p-menuitem-link
-.p-menuitem-icon,
+    .p-panelmenu-content
+    .p-menuitem:not(.p-highlight):not(.p-disabled).p-focus
+    > .p-menuitem-content
+    .p-menuitem-link
+    .p-menuitem-icon,
 .p-panelmenu
-.p-panelmenu-content
-.p-menuitem:not(.p-highlight):not(.p-disabled).p-focus
-> .p-menuitem-content
-.p-menuitem-link
-.p-submenu-icon {
+    .p-panelmenu-content
+    .p-menuitem:not(.p-highlight):not(.p-disabled).p-focus
+    > .p-menuitem-content
+    .p-menuitem-link
+    .p-submenu-icon {
     color: #495057;
 }
 
@@ -6416,26 +6416,26 @@
 }
 
 .p-panelmenu
-.p-panelmenu-content
-.p-menuitem:not(.p-highlight):not(.p-disabled)
-> .p-menuitem-content:hover
-.p-menuitem-link
-.p-menuitem-text {
+    .p-panelmenu-content
+    .p-menuitem:not(.p-highlight):not(.p-disabled)
+    > .p-menuitem-content:hover
+    .p-menuitem-link
+    .p-menuitem-text {
     color: #495057;
 }
 
 .p-panelmenu
-.p-panelmenu-content
-.p-menuitem:not(.p-highlight):not(.p-disabled)
-> .p-menuitem-content:hover
-.p-menuitem-link
-.p-menuitem-icon,
+    .p-panelmenu-content
+    .p-menuitem:not(.p-highlight):not(.p-disabled)
+    > .p-menuitem-content:hover
+    .p-menuitem-link
+    .p-menuitem-icon,
 .p-panelmenu
-.p-panelmenu-content
-.p-menuitem:not(.p-highlight):not(.p-disabled)
-> .p-menuitem-content:hover
-.p-menuitem-link
-.p-submenu-icon {
+    .p-panelmenu-content
+    .p-menuitem:not(.p-highlight):not(.p-disabled)
+    > .p-menuitem-content:hover
+    .p-menuitem-link
+    .p-submenu-icon {
     color: #6c757d;
 }
 
@@ -6628,23 +6628,23 @@
 }
 
 .p-tieredmenu
-.p-menuitem:not(.p-highlight):not(.p-disabled).p-focus
-> .p-menuitem-content
-.p-menuitem-link
-.p-menuitem-text {
+    .p-menuitem:not(.p-highlight):not(.p-disabled).p-focus
+    > .p-menuitem-content
+    .p-menuitem-link
+    .p-menuitem-text {
     color: #495057;
 }
 
 .p-tieredmenu
-.p-menuitem:not(.p-highlight):not(.p-disabled).p-focus
-> .p-menuitem-content
-.p-menuitem-link
-.p-menuitem-icon,
+    .p-menuitem:not(.p-highlight):not(.p-disabled).p-focus
+    > .p-menuitem-content
+    .p-menuitem-link
+    .p-menuitem-icon,
 .p-tieredmenu
-.p-menuitem:not(.p-highlight):not(.p-disabled).p-focus
-> .p-menuitem-content
-.p-menuitem-link
-.p-submenu-icon {
+    .p-menuitem:not(.p-highlight):not(.p-disabled).p-focus
+    > .p-menuitem-content
+    .p-menuitem-link
+    .p-submenu-icon {
     color: #495057;
 }
 
@@ -6654,23 +6654,23 @@
 }
 
 .p-tieredmenu
-.p-menuitem:not(.p-highlight):not(.p-disabled)
-> .p-menuitem-content:hover
-.p-menuitem-link
-.p-menuitem-text {
+    .p-menuitem:not(.p-highlight):not(.p-disabled)
+    > .p-menuitem-content:hover
+    .p-menuitem-link
+    .p-menuitem-text {
     color: #495057;
 }
 
 .p-tieredmenu
-.p-menuitem:not(.p-highlight):not(.p-disabled)
-> .p-menuitem-content:hover
-.p-menuitem-link
-.p-menuitem-icon,
+    .p-menuitem:not(.p-highlight):not(.p-disabled)
+    > .p-menuitem-content:hover
+    .p-menuitem-link
+    .p-menuitem-icon,
 .p-tieredmenu
-.p-menuitem:not(.p-highlight):not(.p-disabled)
-> .p-menuitem-content:hover
-.p-menuitem-link
-.p-submenu-icon {
+    .p-menuitem:not(.p-highlight):not(.p-disabled)
+    > .p-menuitem-content:hover
+    .p-menuitem-link
+    .p-submenu-icon {
     color: #6c757d;
 }
 
@@ -7427,7 +7427,7 @@
 .p-terminal .p-terminal-input {
     font-size: 1rem;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif,
-    'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+        'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
 }
 
 .p-button-label {
