--- a/resources/css/_theme.css
+++ b/resources/css/_theme.css
@@ -802,6 +802,7 @@
 
 .p-chips .p-chips-multiple-container {
     padding: 0.375rem 0.75rem;
+    width:100%;
 }
 
 .p-chips .p-chips-multiple-container .p-chips-token {
@@ -828,7 +829,7 @@
 .p-chips .p-chips-multiple-container .p-chips-input-token input {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif,
         'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
-    font-size: 1rem;
+    font-size: 0.875rem;
     color: #495057;
     padding: 0;
     margin: 0;
